--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+AU+VIC+Guides&display=swap');
+</style>
 *{
-    margin: 0;
+    margin: 0px;
     padding: 0;
 }
 h2 {
@@ -8,14 +11,27 @@ h2 {
     font-style: italic;
     font-weight: lighter;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: "Open Sans", serif;
     text-decoration: overline;
     font-size: 60px;
-
-
+    padding-top: 250px;
 }
 .heaading-parent {
-    background-color: blue;
+    background-image: url("background.jpg");
+    clip-path: polygon(0 0, 100% 0, 89% 85%, 0% 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 600px;
-    padding: 100px 0px;
-    margin: 60px 60px;
+}
+.btn-parent {
+    text-align: center;
+    margin: 25px 0px;
+}
+.btn {
+    background-color: tomato;
+    padding: 8px 10px;
+    color: aquamarine;
+    border-style: dashed;
+    border-color: aqua;
+    border-radius: 6px;
 }
